# solana-starter

./: .gitignore  .gitpod.yml  Cargo.toml  README.md  backup_justfile  index.js  package-lock.json  package.json  solana_install.sh
docker/: Dockerfile
keys/: test_key
src/: lib.rs
