[package]
name = "solana-starter"
version = "1.0.0"
authors = [""]
edition = "2018"
readme = "README.md"
license = "MIT"
keywords = [ "starter"]
description = """"""

[workspace]
members = [
    "utils",
    "cli",
    "core",
]

[dependencies]


[dev-dependencies]
predicates = "1.0.5"

[profile.dev]
opt-level=0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level=3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
