[package]
name = "solana-starter"
version = "1.0.0"
authors = ["Shabaz Ahmed <shabaz1729@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
keywords = [ "starter"]
description = """"""

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "1.7.9"
thiserror = "1.0.24"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
arrayref = "0.3.6"

[dev-dependencies]
solana-program-test = "1.7.9"
solana-sdk = "1.7.9"
predicates = "1.0.5"

[profile.dev]
opt-level=0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level=3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
